@@ -7,8 +7,8 @@
 #
 # Generated by gnulib-tool.
 #
-# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io tzset restrict time_r mktime minmax memmove nanosleep stat
-# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt getpass-gnu gettext gettime gettimeofday memmove minmax mkstemp mktime nanosleep pathmax regex restrict save-cwd stat stdbool strcase time_r timespec tzset unlocked-io vasnprintf xalloc xgetcwd xsize
+# Invoked as: gnulib-tool --import gettext vasnprintf regex atexit save-cwd dirname exit exitfail extensions fnmatch-posix fnmatch mkstemp getopt stdbool getline getnline getndelim2 gethostname strcase getpass-gnu gettimeofday timespec gettime unlocked-io tzset restrict time_r mktime minmax memmove nanosleep stat lstat
+# Reproduce by: gnulib-tool --import --dir=. --lib=libgnu --source-base=lib --m4-base=m4   alloca alloca-opt atexit dirname exit exitfail extensions fnmatch fnmatch-posix gethostname getline getndelim2 getnline getopt getpass-gnu gettext gettime gettimeofday lstat memmove minmax mkstemp mktime nanosleep pathmax regex restrict save-cwd stat stdbool strcase time_r timespec tzset unlocked-io vasnprintf xalloc xgetcwd xsize
 
 AC_DEFUN([gl_EARLY],
 [
@@ -35,6 +35,7 @@ AC_DEFUN([gl_INIT],
   dnl you must add AM_GNU_GETTEXT([external]) or similar to configure.ac.
   gl_GETTIME
   AC_FUNC_GETTIMEOFDAY_CLOBBER
+  gl_FUNC_LSTAT
   gl_FUNC_MEMMOVE
   gl_FUNC_MKSTEMP
   gl_FUNC_MKTIME
